# FletPlatformer

./: README.md  pyproject.toml
installer/: fletplatformer.iss
src/: audio_manager.py  audio_test.py  backgrounds.py  bg_loops.py  game_manager.py  images.py  main.py  main_ui.py  player_test.py  setup.py
src/audio/: audio_manager.py  music_data.py  sfx_data.py
src/components/: lups_counter.py
src/entities/: enemy.py  entity.py  goblin.py  player.py
src/tests/: enemy_test.py  entity_test.py  player_test.py
src/utilities/: collisions.py  events.py  file_management.py  keyboard_manager.py  setup_path.py  tasks.py  values.py
tools/: build_app.py
