[project]
name = "FletPlatformer"
version = "0.2.1"
description = "A Platformer Game Made in Flet"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "MetaDusk", email = "andredcxxv@gmail.com" }]
license = { text = "AGPL-3.0" }

dependencies = [
    "flet==0.70.0.dev6787",
    "flet-cli==0.70.0.dev6787",
    "flet-desktop==0.70.0.dev6787",
    "pygame>=2.6.1",
    "pynput>=1.8.1",
]

[tool.flet]
org = "com.metadusk"
product = "Flet Platformer"
company = "MetaDusk Inc."
copyright = "Copyright (C) 2025 MetaDusk"
compile_app = true
compile_packages = true
cleanup_on_compile = true
build_number = 1

[tool.flet.assets]
include = ["images/**", "audio/**"]

[tool.flet.splash]
color = "#ffffff"
dark_color = "#333333"

[tool.flet.app]
path = "src"

[tool.flet.app.boot_screen]
show = true
message = "Booting Up App... Please wait."

[tool.flet.app.startup_screen]
show = true
message = "Starting App... Please wait."

[dependency-groups]
dev = ["tomlkit>=0.13.3"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
